--- a/css/form.css
+++ b/css/form.css
@@ -1,21 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Otomanopee+One&family=Roboto+Mono:ital,wght@1,100&family=Zen+Loop&display=swap');
 body{
 	background-image: url(fondo.jpg);
 	background-size: 100vw 100vh;
 	background-attachment: fixed ;
 	margin: 0;
-	font-family: monospace;
+	font-family: 'Otomanopee One', sans-serif;
 }
 
 form{
-	width: 450px;
+	width: 700px;
 	margin: auto;
-	background: rgba(0,0,0,0.1);
-	padding: 10px 20px;
+	background: rgba(0,0,0,0.2);
+	padding: 70px 70px;
 	box-sizing: border-box;
-	margin-top:5px;
-	border-radius: 10px;
+	margin-top:250px;
+	border-radius: 100px;
 }
 p{
+	font-size: 200%;
 	font-family: cursive;
 	color: black;
 	text-align: center;
@@ -23,14 +25,15 @@ p{
 	padding: 50px;
 }
 h2{
-	color: #fff;
+	color: #535c68;
 	text-align: center;
 	margin: 0;
-	font-size: 30px;
+	font-size: 70px;
 	margin-bottom: 20px;
 }
 
 input,textarea{
+	font-family: 'Otomanopee One', sans-serif;
 	width: 100%;
 	margin-bottom: 20px;
 	padding: 7px;
@@ -39,27 +42,32 @@ input,textarea{
 	border: none;
 }
 textarea{
+	background: rgba(0,0,0,0.5);
+	border-radius: 30px;
 	min-height: 100px;
 	max-height: 200px;
 	max-width: 100%;
+	color: #a4b0be;
+}
+input{
+	background: rgba(0,0,0,0.5);
+	color: #a4b0be;
 }
 #boton{
-	background: #31384a;
+	background: rgba(0,0,0,0.5);
+	font-size: 20px;
 	color: white;
-	padding: 20px;
+	padding: 30px;
+	border-radius: 20px;
 
 }
 #boton:hover{
 	cursor: pointer;
+	background: rgba(0,0,0,0.8);
 }
 
-@media (max-width: 480px){
+@media (max-width: 700px){
 	form{
-		width: 100%;
-	}
-}
-@media (max-width: 480px){
-	p{
 		width: 100%;
 	}
 }
