--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,7 @@ body{
     top:0;
     left: 0;
     width: 100%;
-    height: 60px;
+    height: 4em;
     background: #fff;
     display: flex;
     justify-content: space-between;
