--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,9 @@
     box-sizing: border-box;
     font-family: 'Shadows Into Light', cursive;
 }
+html {
+  scroll-behavior: smooth;
+}
 body{
     overflow-x: hidden;
     background: #fff;
@@ -49,27 +52,6 @@ body{
    font-size: 30px;
    color: var(--black);
 }
-
-
-/** Skew **/
-.skew-abajo{
-    position: absolute;
-	bottom: 0;
-	left: 0;
-	border-width: 0 0 10vh 100vw;
-	border-style: solid;
-	border-color: transparent transparent #fff transparent;
-}
-.skew-arriba{
-    position: absolute;
-	top: 0;
-	left: 0;
-	border-width: 10vh 100vw 0 0;
-	border-style: solid;
-	border-color: #fff transparent transparent transparent;
-	z-index: 10;
-}
-
 /** Navegation Menu **/
 #header{
     position: relative;
@@ -216,22 +198,24 @@ body{
     margin-top: 20px;
 }
 .img-header .welcome > button{
-    width: 170px;
-    height: 40px;
-    background: var(--red);
-    border-radius: 24px;
+    background: rgba(0,0,0,0.1);
+
+    height: 2em;
+    border-radius: 0.7em;
     border:none;
     outline: none;
     font-size: 22px;
-    color: #fff;
     text-align: center;
-    margin-top: 20px;
+    margin-top: 1%;
     cursor: pointer;
     transition: 0.5s;
 }
 .img-header .welcome > button:hover{
-    color: #000;
-    background-color: rgba(256, 256, 256,.5);
+    width: 20%;
+    height: 6%;
+    color: red;
+    background-color: white;
+    border-radius: 19px;
 }
 
 @media only screen and (max-width:773px ){
@@ -414,7 +398,7 @@ body{
     border-top:1px solid var(--grey);
 }
 .footer .container .copy{
-    font-family: 'Pacifico', cursive;
+    font-family: sans-serif;
     margin-top: 5px;
     font-size: 15px;
 }
