--- a/css/styles.css
+++ b/css/styles.css
@@ -30,8 +30,8 @@ body{
     position: fixed;
     bottom: 100px;
     right: -100%;
-    width: 50px;
-    height: 50px;
+    width: 100px;
+    height: 100px;
     background: #fff;
     border:2px solid var(--red);
     display: flex;
@@ -62,22 +62,22 @@ body{
     top:0;
     left: 0;
     width: 100%;
-    height: 4em;
+    height: 5em;
     background: #fff;
     display: flex;
     justify-content: space-between;
     align-items: center;
     z-index: 9999;
 }
-.menu .logo-box{margin-left: 20px;}
+.menu .logo-box{margin-left: 2em;}
 .menu .logo-box h1 a{
     font-family: 'Shadows Into Light', cursive;
     text-decoration: none;
     font-size: var(--title);
-    font-weight: 400;
+    font-weight: 400%;
     color:var(--black);
 }
-.menu .list-container{margin-right: 20px;}
+.menu .list-container{margin-right: 2%;}
 .menu .list-container ul{display: flex;}
 .menu .list-container ul li{list-style: none;}
 .menu .list-container ul li a{
@@ -86,9 +86,9 @@ body{
     margin: 0px 10px;
     padding:8px;
     color: var(--black);
-    border-radius: 24px;
-    transition: 0.3s;
-    font-size: 16px;
+    border-radius: 80%;
+    transition: 0.5s;
+    font-size: 1.7em;
 }
 .menu .list-container ul li a.active{
     background: var(--red);
