--- a/css/styles.css
+++ b/css/styles.css
@@ -30,8 +30,8 @@ body{
     position: fixed;
     bottom: 100px;
     right: -100%;
-    width: 100px;
-    height: 100px;
+    width: 60px;
+    height: 60px;
     background: #fff;
     border:2px solid var(--red);
     display: flex;
@@ -62,7 +62,7 @@ body{
     top:0;
     left: 0;
     width: 100%;
-    height: 5em;
+    height: 60px;
     background: #fff;
     display: flex;
     justify-content: space-between;
@@ -84,11 +84,11 @@ body{
     font-family: 'Shadows Into Light', cursive;
     text-decoration: none;
     margin: 0px 10px;
-    padding:8px;
+    padding:0.3em;
     color: var(--black);
-    border-radius: 80%;
+    border-radius: 1em;
     transition: 0.5s;
-    font-size: 1.7em;
+    font-size: 1.6em;
 }
 .menu .list-container ul li a.active{
     background: var(--red);
@@ -180,7 +180,7 @@ body{
     flex-direction: column;
 }
 .img-header .welcome h1{
-    font-size: 50px;
+    font-size: 3em;
     color:#fff;
     font-weight: 200;
 }
@@ -212,8 +212,9 @@ body{
     transition: 0.5s;
 }
 .img-header .welcome > button:hover{
-    width: 17%;
-    height: 5%;
+    width: 18%;
+    height: 6%;
+    font-size: 158%;
     color: red;
     background-color: white;
     border-radius: 19px;
