--- a/css/form.css
+++ b/css/form.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Otomanopee+One&family=Roboto+Mono:ital,wght@1,100&family=Zen+Loop&display=swap');
 body{
-	background-image: url(fondo.jpg);
+	background-image: url(fondo.png);
 	background-size: 100vw 100vh;
 	background-attachment: fixed ;
 	margin: 0;
@@ -10,10 +10,10 @@ body{
 form{
 	width: 700px;
 	margin: auto;
-	background: rgba(0,0,0,0.2);
+	background: rgba(0,0,0,0.4);
 	padding: 70px 70px;
 	box-sizing: border-box;
-	margin-top:250px;
+	margin-top:10em;
 	border-radius: 100px;
 }
 p{
@@ -21,11 +21,11 @@ p{
 	font-family: cursive;
 	color: black;
 	text-align: center;
-	margin:20px;
-	padding: 50px;
+	margin:1%;
+	padding: 100px;
 }
 h2{
-	color: #535c68;
+	color: white;
 	text-align: center;
 	margin: 0;
 	font-size: 70px;
