--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Shadows+Into+Light&display=swap');
+@import url('../js/main.js');
 
 :root{   
    --red:#ed4c67;
@@ -17,7 +18,8 @@
     margin:0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Shadows Into Light', cursive;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
 }
 html {
   scroll-behavior: smooth;
@@ -53,115 +55,13 @@ body{
    color: var(--black);
 }
 /** Navegation Menu **/
-#header{
-    position: relative;
-    width: 100%;
-}
-.menu{
-    position: fixed;
-    top:0;
-    left: 0;
-    width: 100%;
-    height: 60px;
-    background: #fff;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 9999;
-}
-.menu .logo-box{margin-left: 2em;}
-.menu .logo-box h1 a{
-    font-family: 'Shadows Into Light', cursive;
-    text-decoration: none;
-    font-size: var(--title);
-    font-weight: 400%;
-    color:var(--black);
-}
-.menu .list-container{margin-right: 2%;}
-.menu .list-container ul{display: flex;}
-.menu .list-container ul li{list-style: none;}
-.menu .list-container ul li a{
-    font-family: 'Shadows Into Light', cursive;
-    text-decoration: none;
-    margin: 0px 10px;
-    padding:0.3em;
-    color: var(--black);
-    border-radius: 1em;
-    transition: 0.5s;
-    font-size: 1.6em;
-}
-.menu .list-container ul li a.active{
-    background: var(--red);
-    color:#fff;
-}
-.menu .list-container ul li a:hover{
-    background: var(--red);
-    color:#fff;
-}
-
-.btn-menu > .fa-bars{
-    display: none;
-}
-
-@media only screen and (max-width:900px){
-    .btn-menu > .fa-bars{
-        display: block;
-        position:absolute;
-        right: 30px;
-        top: 20px;
-        font-size: 28px;
-        color: var(--black);
-        transition: 0.5s;
-        cursor: pointer;
-    }
-    .btn-menu > .fa-times{color: var(--red);}
-    .btn-menu > .fa-bars:hover{color:var(--red);}
-    .menu .logo-box{margin-left: 30px;}
-    .menu .list-container{
-        position: fixed;
-        top:60px;
-        left:-100%;
-        background:#fff;
-        width: 100%;
-        height: calc(100vh - 60px);
-    }
-    .menu .list-container .lists{
-        width: 100%;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        border-top:4px solid var(--red);
-    }
-    .menu .list-container ul li{
-        width: 90%;
-        border-bottom: 2px solid var(--black);
-        display: flex;
-        justify-content: center;
-    }
-    .menu .list-container ul li a{
-        font-size: 20px;
-        text-align: center;
-        padding:12px 0px;
-    }
-    .menu .list-container ul li a.active{
-        background: none;
-        color:var(--red);
-    }
-    .menu .list-container ul li a:hover{
-        background: none;
-        color:var(--red);
-    }
-}
-
 
 /** IMG Header **/
 .img-header{
     position: relative;
     width: 100%;
     height: 100vh;
-    background:url(../img/fondo7.jpg);
+    background:url(../img/fondo10.png);
     background-attachment: fixed;
     background-position: center;
     background-size: 100vw 100vh;
@@ -197,39 +97,6 @@ body{
     color: #fff;
     margin-top: 20px;
 }
-.img-header .welcome > button{
-    background: rgba(0,0,0,0.1);
-
-    height: 2em;
-    width: 7em;
-    border-radius: 0.7em;
-    border:none;
-    outline: none;
-    font-size: 22px;
-    text-align: center;
-    margin-top: 1%;
-    cursor: pointer;
-    transition: 0.5s;
-}
-.img-header .welcome > button:hover{
-    width: 18%;
-    height: 6%;
-    font-size: 158%;
-    color: red;
-    background-color: white;
-    border-radius: 19px;
-}
-
-@media only screen and (max-width:773px ){
-    .img-header .welcome h1{font-size: 40px;}
-    .img-header .welcome > button{width: 130px; font-size: 20px;}
-}
-@media only screen and (max-width:590px){
-    .img-header .welcome h1{font-size: 30px;}
-    .img-header .welcome hr{width: 100px;}
-    .img-header .welcome p{font-size: 17px;}
-    .img-header .welcome > button{width: 100px; font-size: 17px;}
-}
 
 /** pictogramas **/
 .picto{
@@ -255,29 +122,13 @@ body{
     margin:auto;
     background: var(--black);
 }
+
 .picto .box-picto{
     width: 90%;
-    margin: 30px auto;
+    margin: 9em auto;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-}
-.picto .box-picto .card-picto{
-    width: 45%;
-    margin: 20px;
-    padding: 10px;
-    border-radius: 20px;
-    transition: all .2s ease 0s;
-}
-.picto .box-picto .card-picto:hover{
-    cursor: pointer;
-    background: rgba(223, 230, 233,1.0); 
-}
-.picto .box-picto .card-picto:hover .picto-text{
-    border: 2px solid var(--grey); 
-}
-.picto .box-picto .card-picto:hover .picto-text h4{
-    color: var(--grey); 
 }
 .picto .box-picto .card-picto .card-img{
     display: flex;
@@ -285,18 +136,41 @@ body{
     margin-bottom: 20px;
 }
 .picto .box-picto .card-picto .card-img img{
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    border: 7px solid #333;
+    width: 18em;
+    height: 18em;
+    border-radius: 25%;
+    border: 2px solid #333;
     object-fit: cover;
 }
-.picto .box-picto .card-picto .picto-text{
-    min-height: 280px;
-    border: 2px solid var(--red);
-    padding:20px;
+.picto .box-picto .card-picto{
+    width: 45%;
+    margin: 15px;
+    padding: 10px;
     border-radius: 20px;
-    transition: 0.1s;
+    transition: all .2s ease 0s;
+}
+
+p{
+    list-style:none;
+    text-align: center;
+    font-size: 1.5em;
+    font-family: calibry;
+    text-anchor: 10px;
+}
+
+.picto .box-picto .card-picto:hover{
+    cursor: pointer;
+    background: rgba(223, 230, 233,1.0);
+    transition: 0.4s;
+    
+
+}
+.picto .box-picto .card-picto .picto-text{
+    min-height: 2em;
+    border: 2px solid var(--red);
+    padding:40px;
+    border-radius: 10px;
+    transition: 2s;
     cursor: pointer;
 }
 .picto .box-picto .card-picto .picto-text h4{
@@ -305,86 +179,11 @@ body{
     color: var(--red);
     text-align: center;
     margin-bottom: 10px;
-    transition: 0.1s;
-}
-.picto .box-picto .card-picto .picto-text p{
-    font-family: 'Open Sans', sans-serif;
-    font-size: 20px;
-    text-align: center;
-    line-height: 40px;
-    color: var(--black);
-}
-@media only screen and (max-width:1450px){
-    .picto .box-picto .card-picto .picto-text{min-height: 460px}
-}
-@media only screen and (max-width:890px){
-    .picto .box-picto .card-picto .card-img img{width: 200px; height: 200px;}
-    .picto .box-picto .card-picto{width: 100%;}
-    .picto .box-picto .card-picto .picto-text{min-height: 200px}
-    .picto .box-picto .card-picto .picto-text h4{font-size: 25px;}
-    .picto .box-picto .card-picto .picto-text p{font-size: 17px; line-height: 35px;}
-}
-@media only screen and (max-width:590px){
-    .picto .picto-title h2{font-size: 30px;}
+    transition: 2s;
+
 }
 
-/** Acerca de Nosotros **/
-.acerca-de{
-    width: 100%;
-    margin-bottom: 120px;
-}
-.acerca-de .info-container{
-    width: 80%;
-    margin:auto;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-}
-.acerca-de .info-container h1{
-    font-size: 50px;
-    font-weight: 400;
-    color: var(--black);
-    text-align: center;
-    margin-bottom: 20px;
-}
-.acerca-de .info-container hr{
-    width: 40%;
-    height: 2px;
-    margin:auto;
-    background: var(--black);
-}
-.acerca-de .info-container p{
-    text-align: center;
-    font-size: 17px;
-    color: var(--black);
-    line-height: 35px;
-    margin:10px 0px;
-}
-.acerca-de .info-container .about-more{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
-.acerca-de .info-container .about-more button{
-    width: 120px;
-    height: 40px;
-    text-align: center;
-    line-height: 40px;
-    font-size: 20px;
-    background: var(--red);
-    border: none;
-    outline: none;
-    border-radius: 20px;
-    color: #fff;
-    cursor: pointer;
-    transition: 0.5s;
-}
-.acerca-de .info-container .about-more button:hover{background: var(--grey);}
 
-@media only screen and (max-width:590px){
-    .acerca-de .info-container h1{font-size: 30px;}
-    .acerca-de .info-container p{font-size: 15px;}
-}
 /** Footer **/
 .footer{
     position: relative;
@@ -427,3 +226,4 @@ body{
 .footer .container .sociales .icon-instagram:hover{
     color: #833471;
 }
+
