--- a/css/footer.css
+++ b/css/footer.css
@@ -10,7 +10,7 @@ body {
 footer{
   width: 100%;
   bottom: 0 !important;
-  position: absolute;
+  position: fixed;
 
   left: 0;
   background-color: #dcdde1;
