--- a/css/form.css
+++ b/css/form.css
@@ -83,6 +83,10 @@ input{
 
 
 	form{
+	border-bottom: white  5px solid;
+	border-top: white 5px solid;
+	border-right: white 5px solid;
+	border-left: white 5px solid;
 	width: 850px;
 	height: 750px;
 	margin: auto;
