--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,12 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Rampart+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Klee+One:wght@600&display=swap');
+
 .topnav {
-  
   position: relative;
   overflow: hidden;
   background-color: white;
 }
 .topnav a {
-    font-family: 'Rampart One', cursive;
+  font-family: 'Klee One', cursive;
   float: left;
   display: block;
   color: black;
@@ -30,7 +30,6 @@
   display: none;
 }
 
-/*
 @media screen and (max-width: 800px) {
   .topnav a:not(:first-child) {display: none;}
   .topnav a.icon {
@@ -42,12 +41,11 @@
     display: block;
   }
 }
-*/
 
 @media screen and (width: 980px) {
 
     .topnav a {
-      font-family: 'Rampart One', cursive;
+      font-family: 'Klee One', cursive;
       float: left;
       display: block;
       color: black;
@@ -70,7 +68,7 @@
       font-size: 30px;
     }
   }
-  @media screen and (max-width: 960px) {
+  @media only screen and (max-width: 800px) {
 
     .topnav a {
       font-family: 'Rampart One', cursive;
@@ -78,7 +76,7 @@
       display: block;
       color: black;
       text-align: center;
-      padding: 25px 25px;
+      padding: 20px 20px;
       text-decoration: none;
       font-size: 1.5em;
     }
