--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -1,3 +1,7 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 #lightbox{
     z-index: 99;
     width: 100%;
@@ -8,32 +12,47 @@
     background: rgba(0,0,0,0.9);
 
 }
-#lightbox h1{
+.centerr{
     text-align: center;
 }
 #lightbox iframe{
-    border-radius: 20px;
-    width: 100vw;
-    height: 40vw;
-    margin-top: 5vh;
-    border: 5px solid white;
+    border-radius: 50px;
+    width: 90vw;
+    height: 70vh;
+    margin-top: 15vh;
+    border: 2px solid white;
+    
 }
 #cerrar{
     position: absolute;
-    top: 20px;
-    right: 20px;
-    width: 2.3em;
+    top: 0;
+    right: 0;
+    margin: 15px;
+    font-size: 5rem;
+    color: white;
+}
+#cerrar:hover{
+    color:lightseagreen;
+    font-size: 5.5rem;
+    transition: 1s;
 }
 
-@media (width: 900px) { 
+@media (width: 980px) { 
 
     #lightbox iframe{
-        margin-top: 30%;
         border-radius: 20px;
         width: 100%;
-        height: 500px;
-        margin-top: 30%;
+        height: 50em;
+        margin-top: 40%;
         border: 5px solid white;
+    }
+    #cerrar{
+        position: absolute;
+        top: 0;
+        right: 0;
+        margin: 15px;
+        font-size: 10rem;
+        color: white;
     }
 
 }
